--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+title: Karthik Sastry
+logo: /assets/img/headshot-crop.jpg
+description: Prize Fellow in Economics, History, and Politics at Harvard University (from July 1, 2022)
+# show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
