--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ title: Karthik Sastry
 logo: /assets/img/headshot-crop.jpg
 description: Prize Fellow in Economics, History, and Politics at Harvard University (from July 1, 2022)
 theme: jekyll-theme-minimal
+github:
 is_project_page: false
