changing description to not show up in the header

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Karthik Sastry
 logo: /assets/img/headshot-crop.jpg
-description: Prize Fellow in Economics, History, and Politics at Harvard University (from July 1, 2022)
+description:
+description2: Prize Fellow in Economics, History, and Politics at Harvard University (from July 1, 2022)
 theme: jekyll-theme-minimal
 github:
   is_project_page: false
