Changed CV and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Karthik Sastry
 logo: /assets/img/headshot-crop.jpg
-description:
-description2: Prize Fellow in Economics, History, and Politics at Harvard University (from July 1, 2022)
+description: Ph.D. Student, MIT
 theme: jekyll-theme-minimal
 github:
   is_project_page: false
