Changed CV and added Google file

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Karthik Sastry
 logo: /assets/img/headshot-crop.jpg
-description: Ph.D. Student, MIT
+description:
 theme: jekyll-theme-minimal
 github:
   is_project_page: false
