--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ title: Karthik Sastry
 logo: /assets/img/headshot-crop.jpg
 description:
 theme: jekyll-theme-minimal
+url: https://ksastry.github.io
+plugins:
+  - jekyll-sitemap
 github:
   is_project_page: false
   is_user_page: false
