--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ theme: jekyll-theme-minimal
 url: https://ksastry.github.io
 plugins:
   - jekyll-sitemap
+  - jekyll-seo-tag
 github:
   is_project_page: false
   is_user_page: false
+author: Karthik Sastry
