--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Karthik Sastry
 logo: /assets/img/headshot-crop.jpg
-description:
+description: "Prize Fellow in Economics, History, and Politics"
 theme: jekyll-theme-minimal
 url: https://ksastry.github.io
 plugins:
