--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Karthik Sastry
-logo: /assets/img/headshot_rectangle.jpg
+logo: /assets/img/karthik.jpg
 description: "Assistant Professor of Economics and Public Affairs at Princeton University"
 theme: jekyll-theme-minimal
 url: https://ksastry.github.io
